[tool.poetry]
name = "aioimport"
version = "0.1.5"
description = "Asynchronous module import for asyncio"
authors = ["rndr <rndr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rndr/aioimport"
repository = "https://github.com/rndr/aioimport"
documentation = "https://github.com/rndr/aioimport"
keywords = ["asyncio", "import"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Framework :: AsyncIO",
]
include = [
    "LICENSE",
    "aioimport/py.typed",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.761"
black = "^19.10b0"
flake8 = "^3.7.9"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
